objects/ServiceManagementRecord__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <formula>UnitBody__r.AcceptanceDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>保守管理台帳</relationshipLabel>
        <relationshipName>ServiceManagementRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountOfContract__c</fullName>
        <formula>SalesOrder__r.AmountOfContract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Att__c</fullName>
        <formula>SalesOrder__r.Att__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMethods__c</fullName>
        <label>請求方法</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_APR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(4月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_AUG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(8月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_DEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(12月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_FEB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(2月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_JAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(1月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_JUL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(7月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_JUN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(6月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_MAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(3月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_MAY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(5月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_NOV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(11月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_OCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(10月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingPlanningMonth_SEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求予定月(9月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingResultMonth__c</fullName>
        <label>請求実績月</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPosition__c</fullName>
        <formula>SalesOrder__r.SalesContactPosition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約担当者所属</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAccountName__c</fullName>
        <formula>UnitBody__r.SalesAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractModel__c</fullName>
        <formula>SalesOrder__r.ContractModel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPerson__c</fullName>
        <formula>SalesOrder__r.SalesTantoshya__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約担当者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractProgressStatus__c</fullName>
        <label>契約進捗状況</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRelevantDocumentSendDate__c</fullName>
        <label>契約関係書類送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractSendDate__c</fullName>
        <label>契約書送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStopDate__c</fullName>
        <formula>SalesOrder__r.ContractStopDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約中止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStopReason__c</fullName>
        <formula>SalesOrder__r.ContractStopReason__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約中止理由</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryAccountName__c</fullName>
        <formula>UnitBody__r.DeliveryAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>納入先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFEndDate__c</fullName>
        <formula>UnitBody__r.EFEndDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FlagshipProduct__c</fullName>
        <formula>SalesOrder__r.FlagshipProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約内容</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceEndDate__c</fullName>
        <formula>SalesOrder__r.MaintenanceEndDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceStartDate__c</fullName>
        <formula>SalesOrder__r.MaintenanceStartDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceType__c</fullName>
        <formula>SalesOrder__r.MaintenanceType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保守種類</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetMaintenance__c</fullName>
        <formula>SalesOrder__r.NetMaintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NET保守区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUpdated__c</fullName>
        <formula>SalesOrder__r.NewUpdated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新規／更新</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notices__c</fullName>
        <formula>SalesOrder__r.Notices1__c &amp; BR() &amp; SalesOrder__r.Notices2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>特記事項</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <formula>SalesOrder__r.OrderDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オーダ日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <formula>SalesOrder__r.Other1__c &amp; BR() &amp; SalesOrder__r.Other2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>その他</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <formula>SalesOrder__r.ProductNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationPublishDate__c</fullName>
        <label>見積発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairParts__c</fullName>
        <formula>SalesOrder__r.RepairParts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>修理部品</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutineCheck__c</fullName>
        <formula>SalesOrder__r.RoutineCheck__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>定期点検</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesNoOfTimes__c</fullName>
        <formula>SalesOrder__r.SalesNoOfTimes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>売上回数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>保守管理台帳</relationshipLabel>
        <relationshipName>ServiceManagementRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_APR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(4月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_AUG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(8月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_DEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(12月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_FEB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(2月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_JAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(1月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_JUL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(7月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_JUN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(6月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_MAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(3月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_MAY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(5月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_NOV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(11月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_OCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(10月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPlanningMonth_SEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上予定月(9月)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <formula>UnitBody__r.ShippingDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TroubleShooting__c</fullName>
        <formula>SalesOrder__r.Troubleshooting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>故障修理</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>保守管理台帳</relationshipLabel>
        <relationshipName>ServiceManagementRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpdateGuidanceSendDate__c</fullName>
        <label>更新案内送付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpdateStatus__c</fullName>
        <formula>SalesOrder__r.UpdateStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約更新状況</label>
        <type>Text</type>
    </fields>
    <label>保守管理台帳</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesOrder__c</columns>
        <columns>MaintenanceType__c</columns>
        <columns>MaintenanceStartDate__c</columns>
        <columns>MaintenanceEndDate__c</columns>
        <columns>UpdateStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>保守管理台帳ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>